--- a/register.html
+++ b/register.html
@@ -42,6 +42,9 @@
             <h1>Register</h1>
             <form id="registrationForm">
               <input type="email" id="emailInputRegister" placeholder="Email" pattern=".*" required>
+              <input id="givenNameInputRegister" placeholder="name" pattern=".*" required>
+              <input id="familyNameInputRegister" placeholder="family name" pattern=".*" required>
+              <input id="usernameInputRegister" placeholder="username" pattern=".*" required>
               <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" required>
               <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" required>
 
